Data changes for product

--- a/ecommerce/templates/html/homeMain.html
+++ b/ecommerce/templates/html/homeMain.html
@@ -1,27 +1,26 @@
 {% extends "html/nav.html" %} {% load static %} {% block content %}
     {# It is for home page to show display of products. It contains images, description, title #}
     <style>
-        .poster
-        {
+        .poster {
             position: relative;
             top: 0;
             left: 0;
         }
-        .shop
-        {
+
+        .shop {
             position: absolute;
             top: 100px;
             left: 400px;
         }
     </style>
     <div style="position: relative; left: 0; top: 0;">
-        <img src="media/poster.png" alt="Poster"  class="poster" style='height: 300px; width: 100%;'>
+        <img src="media/poster.png" alt="Poster" class="poster" style='height: 300px; width: 100%;'>
         <img src="media/shop.jpeg" alt="Poster" class="shop" style='width: 30%'>
     </div>
     <br> <br>
     <head>
         <link rel="stylesheet" href="{% static 'assests/homeMain.css' %}">
-
+        <link rel="stylesheet" href="{% static 'assests/pagination.css' %}">
     </head>
     <body>
     <div class="container">
@@ -51,7 +50,7 @@
             <div class="col-lg-9">
                 <div class="row">
                     {% for product in product %}
-                        <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="col-lg-6 col-md-6 mb-4">
                             <div class="card h-100">
                                 {% if product.productimage_set.all %}
                                     {% for item in product.productimage_set.all %}
@@ -67,11 +66,12 @@
                                     {#  to print the title, price and description. "truncatewords: #" : is to print the numbers of words in description #}
 
                                     <a href='{{ product.get_absolute_url }}'><h4>{{ product.title }}</h4></a>
-                                    <p class="card-text"> {{ product.tagLine|truncatewords:10 }} </p>
                                     <p>
                                         {#  The link of a unique product. "get_absolute_url" is a function in models.py #}
-                                        <a href="{{ product.get_absolute_url }}" class="btn btn-primary" role="button">View</a>
-                                        <a href="" class="btn btn-default" role="button"></a>
+                                        <a href="{{ product.get_absolute_url }}" class="btn btn-outline-success mr-2"
+                                           role="button">View</a>
+                                        <a href='{% url "update_cart" product.slug %}?qty=1'
+                                           class="btn btn-outline-success" role="button">Add To Cart</a>
                                     </p>Price: <b>${{ product.salePrice }}</b>
                                 </div>
                             </div>
@@ -79,8 +79,32 @@
                         </div>
                     {% endfor %}
                 </div>
+                <div class="row justify-content-center" style="text-align: center">
+                    <nav class="pagination">
+                    <ul class="crumbs">
+                        {% if product.has_previous %}
+                            <li><a class="crumb crumb__prev" href="?page={{ product.previous_page_number }}"><i class="fa fa-chevron-left"></i></a></li>
+                        {% else %}
+                            <li class="crumb disabled"><i class="fa fa-chevron-left"></i></li>
+                        {% endif %}
+                        {% for i in product.paginator.page_range %}
+                            {% if product.number == i %}
+                                <li class="crumb crumb__active"><span>{{ i }} <span class="sr-only">(current)</span></span></li>
+                            {% else %}
+                                <li><a class="crumb" href="?page={{ i }}">{{ i }}</a></li>
+                            {% endif %}
+                        {% endfor %}
+                        {% if product.has_next %}
+                            <li><a class="crumb crumb__next" href="?page={{ product.nect_page_number }}"><i class="fa fa-chevron-right"></i></a></li>
+                        {% else %}
+                            <li class="crumb disabled"><i class="fa fa-chevron-right"></i></li>
+                        {% endif %}
+                    </ul>
+                    </nav>
+                </div>
             </div>
         </div>
     </div>
+
     </body>
 {% endblock content %}
