--- a/ecommerce/templates/html/signin.html
+++ b/ecommerce/templates/html/signin.html
@@ -18,7 +18,7 @@
             <div class="row">
                 <div class="col-sm-6" style="background: transparent">
                     <div class="content-bottom">
-                        <h1 class="login-title" style="color: aliceblue;text-align: center">JazzKart</h1>
+                        <h1 class="login-title" style="color: aliceblue;text-align: center">Organika Grocers</h1>
                         <form method="post" action="signin">
                             {% csrf_token %}
                             <div class="field-group">
