--- a/ecommerce/templates/html/product.html
+++ b/ecommerce/templates/html/product.html
@@ -1,136 +1,149 @@
 {% extends "html/nav.html" %} {% load static %} {% block content %}
-{# It is to custom an individual product  #}
-<head>
-    <link rel="stylesheet" href="{% static 'assests/product.css' %}">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
-</head> 
-<body style=" max-width: 100%;">
-  <div class="container">
-  <div class="row">
-    <!--categrory-->
-    <div class="col-lg-3 col-12 md-mt-40 sm-mt-40">
-      <div class="list-group button2">
-          {% comment %} category {% endcomment %}
-          <form  action='/category/' >
-            <button style="background-color:DarkRed;" class="list-group-item list-group-item-action active">Category</button> 
-            <button type='submit' name='category' value="Foods" class="list-group-item list-group-item-action">Foods<i class="arrow-right"></i></button>
-            <button type='submit' name='category' value="Fruits" class="list-group-item list-group-item-action" >Fruits<i class="arrow-right"></i></button>
-            <button type='submit' name='category' value="Drinks" class="list-group-item list-group-item-action" >Drinks<i class="arrow-right"></i></button>
-            <button type='submit' name='category' value="Others" class="list-group-item list-group-item-action" >Others<i class="arrow-right"></i></button>
-          </form> 
-      </div>
-    </div>
-    <!-- end category-->
-    <section class="text-center col-lg-9 col-12">
-      <h3 class="font-weight-bold mb-5">Product Details</h3>
-      <div class="row">
-        <!--picture-->
-        <div class="col-lg-6 col-12">
-          {% for img in images %}
-          
-          <!--so far, we just have 1 image for product, in future we will add side images-->
-          <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails" data-ride="carousel">
-            {% if img.featured %}
-            <!--slides-->
-            <div class="carousel-inner text-center text-md-left" role="listbox">
-              <div class="carousel-item active">
-                <img src='media/{{ MEDIA_URL }}{{ img.image }}'
-                  alt="First slide" class="img-fluid">
-              </div>
+    {# It is to custom an individual product  #}
+    <head>
+        <link rel="stylesheet" href="{% static 'assests/product.css' %}">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
+    </head>
+    <body style=" max-width: 100%;">
+    <div class="container">
+        <div class="row">
+            <!--categrory-->
+            <div class="col-md-3">
+                <div class="list-group button2">
+                    {% comment %} category {% endcomment %}
+                    <form action='/category/'>
+                        <button style="background-color:darkolivegreen;" class="list-group-item list-group-item-action active">
+                            Category
+                        </button>
+                        <button type='submit' name='category' value="Foods"
+                                class="list-group-item list-group-item-action">Foods<i class="arrow-right"></i></button>
+                        <button type='submit' name='category' value="Fruits"
+                                class="list-group-item list-group-item-action">Fruits<i class="arrow-right"></i>
+                        </button>
+                        <button type='submit' name='category' value="Drinks"
+                                class="list-group-item list-group-item-action">Drinks<i class="arrow-right"></i>
+                        </button>
+                        <button type='submit' name='category' value="Others"
+                                class="list-group-item list-group-item-action">Others<i class="arrow-right"></i>
+                        </button>
+                    </form>
+                </div>
             </div>
-            {% endif %}
-            <!-- end slides-->
-            <!--Thumbnails-->
-            <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-            <!--end Thumbnails-->
-          </div>
-          {% endfor %}
-        </div>
-        <!--end picture-->
+            <!-- end category-->
+            <section class="text-center col-lg-9 col-12">
+                <div class="row">
+                    <!--picture-->
+                    <div class="col-md-6">
+                        {% for img in images %}
 
-        <!--text and price and button-->
-        <div class="col-lg-6 col-12 text-center text-md-left">
-          <h2 class="h2-responsive text-center text-md-left product-name font-weight-bold dark-grey-text mb-1 ml-xl-0 ml-4">
-            <strong>{{product.title}}</strong>
-          </h2>
+                            <!--so far, we just have 1 image for product, in future we will add side images-->
+                            <div id="carousel-thumb" class="carousel slide carousel-fade carousel-thumbnails"
+                                 data-ride="carousel">
+                                {% if img.featured %}
+                                    <!--slides-->
+                                    <div class="carousel-inner text-center text-md-left" role="listbox">
+                                        <div class="carousel-item active">
+                                            <img src='media/{{ MEDIA_URL }}{{ img.image }}'
+                                                 alt="First slide" class="img-fluid">
+                                        </div>
+                                    </div>
+                                {% endif %}
+                                <!-- end slides-->
+                                <!--Thumbnails-->
+                                <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                                <!--end Thumbnails-->
+                            </div>
+                        {% endfor %}
+                    </div>
+                    <!--end picture-->
 
-          <!--price-->
-          <h3 class="h3-responsive text-center text-md-left mb-5 ml-xl-0 ml-4">
+                    <!--text and price and button-->
+                    <div class="col-md-6">
+                        <div class="row">
+                            <h3 class="font-weight-bold mb-5">Product Details</h3>
+                        </div>
+                        <div class="row">
+                            <h2 class="h2-responsive text-center text-md-left product-name font-weight-bold dark-grey-text ml-xl-0 ml-4">
+                                <strong>{{ product.title }}</strong>
+                            </h2>
+                        </div>
+                        <div class="row">
+                            <p>{{product.tagLine}}</p>
+                        </div>
+                        <!--price-->
+                        <div class="row">
+                            <h3 class="h3-responsive text-center text-md-left mb-5 ml-xl-0 ml-4">
             <span class="black-text font-weight-bold">
-              <strong>${{product.salePrice}}</strong>
+              <strong>${{ product.salePrice }}</strong>
             </span>
-          </h3>
-          <!--end price-->
+                            </h3>
+                            <!--end price-->
+                        </div>
+                        <!-- Add to Cart -->
+                        <div class="row">
 
-          <!-- Add to Cart -->
-          <section >
-            <div class="mt-5">
-              
-              <div class="row text-center text-md-left">
+                            <div class="button3">
+                                {% if not user.is_authenticated %}
+                                    <span><a href='{% url "signin" %}'>Sign In to Add</a></span>
+                                {% else %}
+                                    <span><a href='{% url "update_cart" product.slug %}?qty=1'>Add To Cart</a></span>
+                                {% endif %}
+                            </div>
 
 
-              <div class="row mt-3">
-                <div class="col-md-12 text-center text-md-left text-md-right">
-                  <div class="button3">
-                    {% if not user.is_authenticated %} 
-                    <span><a href='{% url "signin" %}'>Sign In to Add</a></span>
-                    {%else%}
-                    <span><a href='{% url "update_cart" product.slug %}?qty=1'>Add To Cart</a></span>
-                    {%endif%}
-                  </div> 
+                            <!-- /.Add to Cart -->
+                        </div>
+                        <br>
+                        <!--accordion card-->
+                        <div class="row">
+                            <div class="accordion md-accordion" id="accordionEx" role="tablist"
+                                 aria-multiselectable="true">
+
+                                <!--card1-->
+                                <div class='card'>
+                                    <div class="card-header" role="tab" id="headingOne1">
+                                        <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1"
+                                           aria-expanded="true"
+                                           aria-controls="collapseOne1">
+                                            <h5 class="mb-0">
+                                                Description
+                                                <i class="fas fa-angle-down rotate-icon"></i>
+                                            </h5>
+                                        </a>
+                                    </div>
+
+                                    <!-- Card body -->
+                                    <div id="collapseOne1" class="collapse show" role="tabpanel"
+                                         aria-labelledby="headingOne1"
+                                         data-parent="#accordionEx">
+                                        {% for img in images %}
+                                            {% if  not img.featured %}
+                                                <div class="card-body">
+                                                    <p>{{ product.description }}</p>
+                                                </div>
+                                            {% endif %}
+                                        {% endfor %}
+                                    </div>
+                                </div>
+
+
+                            </div>
+                        </div>
+                        <!-- end accordion-->
+
+                    </div>
+                    <!-- end text and price and button-->
                 </div>
-              </div>
-            </div>
-          </section>
-          <!-- /.Add to Cart -->
-          <br>
-
-          <!--accordion card-->
-          <div class="accordion md-accordion" id="accordionEx" role="tablist" aria-multiselectable="true">
-            
-            <!--card1-->
-            <div class='card'>
-              <div class="card-header" role="tab" id="headingOne1">
-                <a data-toggle="collapse" data-parent="#accordionEx" href="#collapseOne1" aria-expanded="true"
-                  aria-controls="collapseOne1">
-                  <h5 class="mb-0">
-                    Description
-                    <i class="fas fa-angle-down rotate-icon"></i>
-                  </h5>
-                </a>
-              </div>
-
-              <!-- Card body -->
-              <div id="collapseOne1" class="collapse show" role="tabpanel" aria-labelledby="headingOne1"
-                data-parent="#accordionEx">
-                {% for img in images %}
-                {% if  not img.featured %}
-                <div class="card-body">
-                    <p>{{product.description}}</p>
-                </div>
-                {% endif %}
-                {% endfor %}
-              </div>
-            </div>
-
-
-            
-          </div>
-          <!-- end accordion-->
-
+            </section>
         </div>
-        <!-- end text and price and button-->
-      </div>
-    </section>
-  </div>
-  
-</div>
-</body>
+
+    </div>
+    </body>
 {% endblock content %}
